--- a/src/app/components/Post.css
+++ b/src/app/components/Post.css
@@ -1,8 +1,17 @@
-.post-header {
+/* .post {
+    border: 2px solid black;
+    border-radius: 12px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    display: flex;
+}
+
+.postHeader {
     display: flex;
     align-items: center;
     padding: 10px;
     background-color: white;
+    
 }
 
 .username {
@@ -11,24 +20,33 @@
     color: #333;
 }
 
-.post-image {
-    width: 100%;
+.postImage {
+    width: 100px;
+    margin-right: 1em;
+    border-radius: 25%
 }
 
-.post-content {
+.postContent {
     padding: 15px;
 }
 
-.post-content p {
+.postContent p {
     color: #666;
     font-size: 14px;
     line-height: 1.5;
     margin: 10px 0;
 }
 
-.post-tags {
+.postTags {
     font-size: 12px;
     color: #999;
+}
+
+.postTags:hover{
+    font-size: 12px;
+    color: #999;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .icons {
@@ -44,4 +62,4 @@
     cursor: pointer;
     display: inline-flex;
     align-items: center;
-}
+} */
